--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
     --main-color: #F9F5EB;
+    --secondary-color-dark: #9f9a90;
     --secondary-color: #E4DCCF;
     --tetrary-color: #002B5B;
     --accent-color: #EA5455;
