--- a/src/components/generator.css
+++ b/src/components/generator.css
@@ -3,11 +3,11 @@
     border-radius: 20px;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
     padding: 2em;
+    width: 35vw;
 }
 
 .generator {
-    height: 30vh;
-    width: 30vw;    
+    height: 600px; 
     margin: 5vh 0;
 }
 
